[gd_scene load_steps=4 format=3 uid="uid://xwotlww2hbqy"]

[ext_resource type="Script" path="res://Objects/Launcher/launcher.gd" id="1_2iyjf"]
[ext_resource type="Texture2D" uid="uid://b3x5wdqlaw3fl" path="res://icon.svg" id="2_li7v0"]
[ext_resource type="Texture2D" uid="uid://oul22r3en8ox" path="res://Objects/Marble/debug_marble.png" id="3_xtvi5"]

[node name="Launcher" type="Node2D"]
script = ExtResource("1_2iyjf")
shoot_cooldown = 0.2

[node name="LauncherBody" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("2_li7v0")

[node name="MarbleLaunchPoint" type="Node2D" parent="."]
position = Vector2(37, 0)

[node name="NextMarble" type="Sprite2D" parent="MarbleLaunchPoint"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_xtvi5")

[node name="SwappableMarble" type="Sprite2D" parent="."]
position = Vector2(-41, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_xtvi5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_unblock_shoot"]
